fix token presenter issue for large line heights and letter spacings

--- a/demo-webpack5/tokens.css
+++ b/demo-webpack5/tokens.css
@@ -681,6 +681,7 @@
   */
 
   --line-height: 1.5;
+  --line-height-large: 3;
 
   /**
   * @tokens Letter Spacings
